--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
     <div class="container">
         <header>
             <div class="logo">🎮 PasarSkin</div>
-            <div class="subtitle">CS:GO Skin Trading Inventory Tracker</div>
+            <div class="subtitle">Skin Trading Inventory Tracker</div>
             <div id="storageStatus" style="margin-top: 10px; font-size: 12px; color: #64748b;"></div>
             
             <!-- Cycle Selector -->
